added magement rest controller